# windows-api

./: __init__.py  __main__.py  main.py  pyproject.toml  requirements.txt
src/: DirectInterface.cs
src/dev/examples/interactions-client/: __main__.py
src/dev/nakurity/: __init__.py  pyproject.toml
src/dev/nakurity/handlers/: click.py  dragrel.py  dragto.py  hotkey.py  keydown.py  keyup.py  move.py  press.py  screenshot.py  scroll.py  type.py
src/dev/utils/: __init__.py
src/examples/: Interaction-client.py
src/resources/: authentication.yaml
