[project]
name = "windows-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio==4.0.0",
    "importlib==1.0.4",
    "mouseinfo==0.1.3",
    "pathlib==1.0.1",
    "pillow==12.0.0",
    "pyautogui==0.9.54",
    "pygetwindow==0.0.9",
    "pymsgbox==2.0.1",
    "pyperclip==1.11.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "pytweening==1.2.0",
    "pyyaml==6.0.3",
    "uv==0.9.3",
    "websockets==15.0.1",
]
