[build-system]
requires = ["uv_build >= 0.9.2, <0.10.0"]
build-backend = "uv_build"

[project]
name = "interactions-api"
version = "0.1.0"
description = "WebSocket-based automation API for GUI interactions using pyautogui."
authors = [
    { name = "Cassitly" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pyautogui >=0.9.54",
    "websockets >=12.0",
    "PyYAML >=6.0",
]

[project.urls]
Homepage = "https://github.com/Nakashireyumi/windows-api"
Repository = "https://github.com/Nakashireyumi/windows-api"

[project.scripts]
interactions-api = "interactions_api.__main__:main"

[tool.uv]
# Optional: config for uv_build to include your handler modules
package-dir = "src/contributions/cassitly/python/interactions-api"
